<resources>
    <string name="app_name">BeeBuzz</string>
    <string name="action_settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="some_more_sky_background">some more sky background</string>
    <string name="sky_background">sky background</string>
    <string name="grass_for_flowers">grass_for_flowers</string>
    <string name="season_button">Button</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="sun">sun</string>
    <string name="more_grass">more_grass</string>
    <string name="bee">bee</string>
    <string name="violet">violet</string>
    <string name="blooming_tulip">blooming_tulip</string>
    <string name="anemone">anemone</string>
    <string name="mature_tulip">mature_tulip</string>
    <string name="bee">bee</string>
    <string name="more_grass">more_grass</string>
    <string name="welcome_message">welcome_message</string>
    <string name="snowflake_in_air">snowflake_in_air</string>
    <string name="blue_flower">blue_flower</string>
    <string name="christmas_tree">christmas_tree</string>
    <string name="snowflake_in_air">snowflake_in_air</string>
    <string name="snowflake_in_air">snowflake_in_air</string>
    <string name="ferns_are_friends">ferns_are_friends</string>
    <string name="iris_and_yellow">iris_and_yellow</string>
    <string name="snowflake_on_grass">snowflake_on_grass</string>
    <string name="snowflake_on_grass">snowflake_on_grass</string>
    <string name="snowflake_in_air">snowflake_in_air</string>
    <string name="snowflake_on_grass">snowflake_on_grass</string>
    <string name="welcome_message">welcome_message</string>
    <string name="red_flower">red_flower</string>
    <string name="orange_flower">orange_flower</string>
    <string name="yellow_tulip">yellow_tulip</string>
    <string name="fuscia_flora">fuscia_flora</string>
    <string name="leaves">leaves</string>
    <string name="more_leaves">more_leaves</string>
    <string name="even_more_leaves">even_more_leaves</string>
    <string name="leaves_blowing_in_wind">leaves_blowing_in_wind</string>
    <string name="leaves_blowing_in_wind">leaves_blowing_in_wind</string>
    <string name="leaves_blowing_in_wind">leaves_blowing_in_wind</string>
    <string name="cherry_blossoms">cherry_blossoms</string>
    <string name="cherry_blossoms">cherry_blossoms</string>
    <string name="cherry_blossoms">cherry_blossoms</string>
    <string name="cherry_blossom_branch">cherry_blossom_branch</string>
    <string name="pink_flower">pink_flower</string>
    <string name="purple_tulip">purple_tulip</string>
    <string name="sunflower">sunflower</string>
    <string name="sunglasses">sunglasses</string>
</resources>
