<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bee_buzz_autumn">

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:contentDescription="@string/sky_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sky" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginLeft="139dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="550dp"
        android:layout_marginRight="550dp"
        android:layout_marginBottom="600dp"
        android:contentDescription="@string/some_more_sky_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sky" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="485dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/grass_for_flowers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView20"
        app:srcCompat="@drawable/grass" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="485dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1350dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/grass_for_flowers"
        app:layout_constraintBottom_toTopOf="@+id/imageView21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/grass" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="174dp"
        android:layout_height="178dp"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="720dp"
        android:layout_marginRight="720dp"
        android:layout_marginBottom="870dp"
        android:contentDescription="@string/sun"
        app:layout_constraintBottom_toTopOf="@+id/imageView23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        app:layout_constraintTop_toBottomOf="@+id/imageView21"
        app:srcCompat="@drawable/sun" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="93dp"
        android:contentDescription="@string/bee"
        app:layout_constraintBottom_toTopOf="@+id/imageView24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView25"
        app:srcCompat="@drawable/bee" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="740dp"
        android:layout_marginLeft="740dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:layout_marginBottom="240dp"
        android:contentDescription="@string/season_button"
        android:text="@string/button"
        android:onClick="changeSeason"
        app:layout_constraintBottom_toTopOf="@+id/imageView26"
        app:layout_constraintEnd_toStartOf="@+id/imageView21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="press me!!" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="440dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/welcome_message"
        android:text="@string/textview"
        app:layout_constraintBottom_toTopOf="@+id/imageView21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Welcome to Bee Buzz! The season is currently Autumn." />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="106dp"
        android:layout_height="262dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="760dp"
        android:layout_marginRight="760dp"
        android:layout_marginBottom="250dp"
        android:contentDescription="@string/red_flower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView23"
        app:layout_constraintTop_toBottomOf="@+id/imageView20"
        app:srcCompat="@drawable/red_flower" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="87dp"
        android:layout_height="148dp"
        android:layout_marginStart="200dp"
        android:layout_marginLeft="200dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="170dp"
        android:contentDescription="@string/orange_flower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView34"
        app:layout_constraintStart_toEndOf="@+id/imageView36"
        app:layout_constraintTop_toBottomOf="@+id/imageView32"
        app:srcCompat="@drawable/orange_rose" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="116dp"
        android:layout_height="236dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="565dp"
        android:layout_marginRight="565dp"
        android:layout_marginBottom="250dp"
        android:contentDescription="@string/yellow_tulip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView23"
        app:layout_constraintTop_toBottomOf="@+id/imageView20"
        app:srcCompat="@drawable/yellow_tulip" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="133dp"
        android:layout_height="185dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="222dp"
        android:layout_marginRight="222dp"
        android:layout_marginBottom="230dp"
        android:contentDescription="@string/fuscia_flora"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView36"
        app:layout_constraintTop_toBottomOf="@+id/imageView20"
        app:srcCompat="@drawable/fuscia_flower" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="224dp"
        android:layout_height="91dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="75dp"
        android:contentDescription="@string/leaves"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        app:layout_constraintTop_toBottomOf="@+id/imageView32"
        app:srcCompat="@drawable/leaf_trio" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="137dp"
        android:layout_height="77dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/more_leaves"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView20"
        app:srcCompat="@drawable/leaf_trio" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="170dp"
        android:layout_height="88dp"
        android:layout_marginStart="230dp"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/even_more_leaves"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView23"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toBottomOf="@+id/imageView32"
        app:srcCompat="@drawable/leaf_trio" />

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="230dp"
        android:layout_height="100dp"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:layout_marginBottom="423dp"
        android:contentDescription="@string/leaves_blowing_in_wind"
        android:src="@drawable/leaf_trio"
        app:layout_constraintBottom_toTopOf="@+id/imageView34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ImageView
        android:id="@+id/imageView53"
        android:layout_width="79dp"
        android:layout_height="62dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="170dp"
        android:layout_marginRight="170dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/leaves_blowing_in_wind"
        android:src="@drawable/leaf_trio"
        app:layout_constraintBottom_toTopOf="@+id/imageView20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView26"
        app:layout_constraintTop_toBottomOf="@+id/imageView38" />

    <ImageView
        android:id="@+id/imageView54"
        android:layout_width="91dp"
        android:layout_height="90dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginBottom="270dp"
        android:contentDescription="@string/leaves_blowing_in_wind"
        android:src="@drawable/leaf_trio"
        app:layout_constraintBottom_toTopOf="@+id/imageView20"
        app:layout_constraintEnd_toStartOf="@+id/imageView20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21" />

</android.support.constraint.ConstraintLayout>

